# AM-auto

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: auto.yml  automacao.yml
Dashboard/: app.py  etl_novo.py
Relatorio/: relatorio.html
